# panda3d-flail

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
demos/: point_and_click.py
src/flail/: arms.py  arraytypes.py  bodies.py  ctrlfuncs.py  debug.py  ik.py  spatial.py  traj.py
